<resources>
    <string name="app_name">融富汇</string>


    <!--用户注册页面-->

    <string name="string_return">返回</string>
    <string name="string_regist">注册</string>
    <string name="string_phonenumber">电话号码:</string>
    <string name="string_inputphonenumber">(请输入你的手机号码~11位)</string>
    <string name="string_name">姓名:</string>
    <string name="string_inputname">(请输入真实姓名)</string>
    <string name="string_houses">楼盘名称:</string>
    <string name="string_inputhouses">(请输入楼盘名称)</string>
    <string name="string_unit">单元名称:</string>
    <string name="string_inputunit">(请输入单元名称)</string>
    <string name="string_housesnumber">门牌号码:</string>
    <string name="string_inputhousesnumber">(请输入门牌号码)</string>
    <string name="string_setpwd">设置密码:</string>
    <string name="string_inputsetpwd">请输入密码6~16位</string>
    <string name="string_rgpwd">确认密码:</string>
    <string name="string_inputrgpwd">(请确认您设置的密码)</string>
    <string name="string_agree">同意并接受注册协议</string>
    <string name="string_finish">完成注册</string>

    <!--员工注册页面-->
    <string name="string_regist_apart">部门:</string>
    <string name="string_regist_qx">权限申请:</string>

    <!--注册类型选择界面-->
    <string name="string_registselect_title">注册类型选择</string>
    <string name="string_registselect_yg">员工注册>></string>
    <string name="string_registselect_kh">客户注册>></string>

    <!-- 主界面客户热线 -->
    <string name="service_tel_dialog_content">请你确认拨打客服热线</string>
    <string name="service_tel_dialog_info">4001178877</string>


    <!--登录页面-->
    <string name="string_loginphone">账户名 (手机号)</string>
    <string name="string_loginpwd">输入密码</string>
    <string name="string_forgetpwd">忘记密码?</string>
    <string name="string_loginrg">立即注册>></string>
    <string name="string_login">马上登录</string>

    <!--忘记密码页面-->
    <string name="string_forget_pwd">忘记密码</string>
    <string name="string_forget_inputphonenumber">请输入您的手机号</string>
    <string name="string_forget_inputhouses">请输入您的楼盘名称</string>
    <string name="string_forget_inputunit">请输入您的单元号</string>
    <string name="string_forget_inputhousesnumber">请输入您的门牌号</string>
    <string name="string_forget_find">找回密码</string>


    <!--重置密码界面-->
    <string name="string_pwdset_pwd1">请重置密码</string>
    <string name="string_pwdset_pwd2">请确认您的新密码</string>
    <string name="string_pwdset_confirm">确认</string>

    <!--主页面-->
    <string name="main_service">物业服务</string>
    <string name="main_pay">物业缴费</string>
    <string name="main_interact">社区互动</string>
    <string name="main_setting">个人设置</string>
    <string name="main_service_customer">客服</string>


    <!--个人设置界面-->
    <string name="setting_info">个人信息</string>

    <!--设备详情页面-->
    <string name="device_info">设备详情</string>
    <string name="device_author">公司名称:</string>
    <string name="device_project">公寓名称:</string>
    <string name="device_name">设备名称:</string>
    <string name="device_code">设备编号:</string>
    <string name="device_brand">设备牌子:</string>
    <string name="device_location">设备位置:</string>
    <string name="device_model">设备模式:</string>


    <!--个人信息界面-->
    <string name="personinfo_name">客户名称:</string>
    <string name="personinfo_pphone">电话号码:</string>
    <string name="personinfo_sex">性        别:</string>
    <string name="personinfo_apartname">公寓名称:</string>
    <string name="personinfo_apartaddress">公寓地址:</string>
    <string name="personinfo_unitname">单元名称:</string>
    <string name="personinfo_roomNumber">门牌号码:</string>
    <string name="personinfo_ename">员工姓名:</string>
    <string name="personinfo_ephone">手机号码:</string>
    <string name="personinfo_organization">组织机构:</string>
    <string name="personinfo_roleList">角色名称:</string>


    <!--任务列表-->
    <string name="string_task_title">任务列表</string>


    <!--网络-->
    <string name="toast_network_error1">网络链接错误，请稍后再试！</string>
    <string name="toast_network_error2">数据异常！</string>
    <string name="toast_network_error3">获取数据错误！</string>
    <string name="toast_network_error4">JSON数据异常！</string>


    <!--下拉刷新和加载更多-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


</resources>
