<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="rfh.tianli.com.rfh.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/login_input_name"
        android:layout_marginTop="252dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:textSize="@dimen/rg_str"
            android:hint="@string/string_loginphone"
            android:background="@null"
            android:textColorHint="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/login_input_password"
        android:layout_below="@id/rl_name"
        android:layout_marginTop="11dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        >

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:textSize="@dimen/rg_str"
            android:hint="@string/string_loginpwd"
            android:background="@null"
            android:textColorHint="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:inputType="textPassword"
            />

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/rl_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_below="@id/rl_pwd"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        >

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_forgetpwd"
            android:textSize="12sp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_loginrg"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="50dp"
        android:layout_below="@id/rl_forget"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_login"
        android:text="@string/string_login"
        android:textColor="@color/white"
        android:textSize="19sp"
        />



</RelativeLayout>
