<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_zhuce"
    tools:context="rfh.tianli.com.rfh.RegistActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"

        >
        <ImageView
            android:id="@+id/bt_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_return"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/string_return"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/bt_return"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/string_regist"
            android:layout_centerHorizontal="true"
            android:textSize="18dp"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_title"
        android:layout_marginTop="51dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="@string/string_phonenumber"
            />

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_phonenumber"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputphonenumber"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:inputType="phone"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_phonenumber"
            android:layout_alignRight="@id/et_phonenumber"
            android:layout_alignLeft="@id/et_phonenumber"
            />


    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_phonenumber"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="姓        名:"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_name"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputname"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_name"
            android:layout_alignRight="@id/et_name"
            android:layout_alignLeft="@id/et_name"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_houses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_name"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_houses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="@string/string_houses"
            />

        <EditText
            android:id="@+id/et_houses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_houses"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputhouses"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_houses"
            android:layout_alignRight="@id/et_houses"
            android:layout_alignLeft="@id/et_houses"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_housesnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_houses"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_housesnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="@string/string_housesnumber"
            />

        <EditText
            android:id="@+id/et_housesnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_housesnumber"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputhousesnumber"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_housesnumber"
            android:layout_alignRight="@id/et_housesnumber"
            android:layout_alignLeft="@id/et_housesnumber"
            />

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/rl_setpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_housesnumber"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_setpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="@string/string_setpwd"
            />

        <EditText
            android:id="@+id/et_setpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_setpwd"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputsetpwd"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_setpwd"
            android:layout_alignRight="@id/et_setpwd"
            android:layout_alignLeft="@id/et_setpwd"
            />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_rgpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_setpwd"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="42dp"
        >

        <TextView
            android:id="@+id/tv_rgpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/rg_str"
            android:text="@string/string_rgpwd"
            />

        <EditText
            android:id="@+id/et_rgpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_toRightOf="@id/tv_rgpwd"
            android:background="@null"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/string_inputrgpwd"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:textColorHint="@color/whihte_hint"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@id/et_rgpwd"
            android:layout_alignRight="@id/et_rgpwd"
            android:layout_alignLeft="@id/et_rgpwd"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_rgpwd"
        android:layout_marginTop="22dp"

        >
        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/string_agree"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginRight="45dp"
            android:layout_centerVertical="true"
            />

        <RadioButton
            android:id="@+id/rb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_argee"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@id/tv_agree"
            />
    </RelativeLayout>

    
    <Button
        android:id="@+id/bt_finish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_login"
        android:text="@string/string_finish"
        android:textColor="@color/white"
        />




</RelativeLayout>
